// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`convertToModelMessages > Handles providerExecuted: null 2`] = `
{
  "messages": [
    {
      "content": [
        {
          "input": {
            "x": "y",
          },
          "providerExecuted": null,
          "toolCallId": "call_1",
          "toolName": "x",
          "type": "tool-call",
        },
      ],
      "role": "assistant",
    },
    {
      "content": [
        {
          "output": {
            "type": "text",
            "value": "nothing",
          },
          "toolCallId": "call_1",
          "toolName": "x",
          "type": "tool-result",
        },
      ],
      "role": "tool",
    },
  ],
  "system": undefined,
}
`;

exports[`convertToModelMessages > assistant message > should convert a simple assistant text message 1`] = `
{
  "messages": [
    {
      "content": [
        {
          "text": "Hello, human!",
          "type": "text",
        },
      ],
      "role": "assistant",
    },
  ],
  "system": undefined,
}
`;

exports[`convertToModelMessages > assistant message > should convert a simple assistant text message with provider metadata 2`] = `
{
  "messages": [
    {
      "content": [
        {
          "providerOptions": {
            "testProvider": {
              "signature": "1234567890",
            },
          },
          "text": "Hello, human!",
          "type": "text",
        },
      ],
      "role": "assistant",
    },
  ],
  "system": undefined,
}
`;

exports[`convertToModelMessages > assistant message > should convert an assistant message with file parts 1`] = `
{
  "messages": [
    {
      "content": [
        {
          "data": "data:image/png;base64,dGVzdA==",
          "filename": undefined,
          "mediaType": "image/png",
          "type": "file",
        },
      ],
      "role": "assistant",
    },
  ],
  "system": undefined,
}
`;

exports[`convertToModelMessages > assistant message > should convert an assistant message with reasoning 1`] = `
{
  "messages": [
    {
      "content": [
        {
          "providerOptions": {
            "testProvider": {
              "signature": "1234567890",
            },
          },
          "text": "Thinking...",
          "type": "reasoning",
        },
        {
          "providerOptions": {
            "testProvider": {
              "isRedacted": true,
            },
          },
          "text": "redacted-data",
          "type": "reasoning",
        },
        {
          "text": "Hello, human!",
          "type": "text",
        },
      ],
      "role": "assistant",
    },
  ],
  "system": undefined,
}
`;

exports[`convertToModelMessages > assistant message > should handle assistant message with provider-executed tool output available 2`] = `
{
  "messages": [
    {
      "content": [
        {
          "text": "Let me calculate that for you.",
          "type": "text",
        },
        {
          "input": {
            "numbers": [
              1,
              2,
            ],
            "operation": "add",
          },
          "providerExecuted": true,
          "toolCallId": "call1",
          "toolName": "calculator",
          "type": "tool-call",
        },
        {
          "output": {
            "type": "text",
            "value": "3",
          },
          "toolCallId": "call1",
          "toolName": "calculator",
          "type": "tool-result",
        },
      ],
      "role": "assistant",
    },
  ],
  "system": undefined,
}
`;

exports[`convertToModelMessages > assistant message > should handle assistant message with provider-executed tool output error 2`] = `
{
  "messages": [
    {
      "content": [
        {
          "text": "Let me calculate that for you.",
          "type": "text",
        },
        {
          "input": {
            "numbers": [
              1,
              2,
            ],
            "operation": "add",
          },
          "providerExecuted": true,
          "toolCallId": "call1",
          "toolName": "calculator",
          "type": "tool-call",
        },
        {
          "output": {
            "type": "error-json",
            "value": "Error: Invalid input",
          },
          "toolCallId": "call1",
          "toolName": "calculator",
          "type": "tool-result",
        },
      ],
      "role": "assistant",
    },
  ],
  "system": undefined,
}
`;

exports[`convertToModelMessages > assistant message > should handle assistant message with tool invocations that have multi-part responses 1`] = `
[
  {
    "content": [
      {
        "text": "Let me calculate that for you.",
        "type": "text",
      },
      {
        "input": {},
        "providerExecuted": undefined,
        "toolCallId": "call1",
        "toolName": "screenshot",
        "type": "tool-call",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "output": {
          "type": "text",
          "value": "imgbase64",
        },
        "toolCallId": "call1",
        "toolName": "screenshot",
        "type": "tool-result",
      },
    ],
    "role": "tool",
  },
]
`;

exports[`convertToModelMessages > assistant message > should handle assistant message with tool invocations that have multi-part responses 2`] = `
{
  "messages": [
    {
      "content": [
        {
          "text": "Let me calculate that for you.",
          "type": "text",
        },
        {
          "input": {},
          "providerExecuted": undefined,
          "toolCallId": "call1",
          "toolName": "screenshot",
          "type": "tool-call",
        },
      ],
      "role": "assistant",
    },
    {
      "content": [
        {
          "output": {
            "type": "text",
            "value": "imgbase64",
          },
          "toolCallId": "call1",
          "toolName": "screenshot",
          "type": "tool-result",
        },
      ],
      "role": "tool",
    },
  ],
  "system": undefined,
}
`;

exports[`convertToModelMessages > assistant message > should handle assistant message with tool output available 2`] = `
{
  "messages": [
    {
      "content": [
        {
          "text": "Let me calculate that for you.",
          "type": "text",
        },
        {
          "input": {
            "numbers": [
              1,
              2,
            ],
            "operation": "add",
          },
          "providerExecuted": undefined,
          "providerOptions": {
            "testProvider": {
              "signature": "1234567890",
            },
          },
          "toolCallId": "call1",
          "toolName": "calculator",
          "type": "tool-call",
        },
      ],
      "role": "assistant",
    },
    {
      "content": [
        {
          "output": {
            "type": "text",
            "value": "3",
          },
          "toolCallId": "call1",
          "toolName": "calculator",
          "type": "tool-result",
        },
      ],
      "role": "tool",
    },
  ],
  "system": undefined,
}
`;

exports[`convertToModelMessages > assistant message > should handle conversation with an assistant message that has empty tool invocations 1`] = `
[
  {
    "content": [
      {
        "text": "text1",
        "type": "text",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "text": "text2",
        "type": "text",
      },
    ],
    "role": "assistant",
  },
]
`;

exports[`convertToModelMessages > assistant message > should handle conversation with an assistant message that has empty tool invocations 2`] = `
{
  "messages": [
    {
      "content": [
        {
          "text": "text1",
          "type": "text",
        },
      ],
      "role": "user",
    },
    {
      "content": [
        {
          "text": "text2",
          "type": "text",
        },
      ],
      "role": "assistant",
    },
  ],
  "system": undefined,
}
`;

exports[`convertToModelMessages > assistant message > should handle conversation with mix of tool invocations and text 1`] = `
[
  {
    "content": [
      {
        "text": "i am gonna use tool1",
        "type": "text",
      },
      {
        "input": {
          "value": "value-1",
        },
        "providerExecuted": undefined,
        "toolCallId": "call-1",
        "toolName": "screenshot",
        "type": "tool-call",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "output": {
          "type": "text",
          "value": "result-1",
        },
        "toolCallId": "call-1",
        "toolName": "screenshot",
        "type": "tool-result",
      },
    ],
    "role": "tool",
  },
  {
    "content": [
      {
        "text": "i am gonna use tool2 and tool3",
        "type": "text",
      },
      {
        "input": {
          "value": "value-2",
        },
        "providerExecuted": undefined,
        "toolCallId": "call-2",
        "toolName": "screenshot",
        "type": "tool-call",
      },
      {
        "input": {
          "value": "value-3",
        },
        "providerExecuted": undefined,
        "toolCallId": "call-3",
        "toolName": "screenshot",
        "type": "tool-call",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "output": {
          "type": "text",
          "value": "result-2",
        },
        "toolCallId": "call-2",
        "toolName": "screenshot",
        "type": "tool-result",
      },
      {
        "output": {
          "type": "text",
          "value": "result-3",
        },
        "toolCallId": "call-3",
        "toolName": "screenshot",
        "type": "tool-result",
      },
    ],
    "role": "tool",
  },
  {
    "content": [
      {
        "input": {
          "value": "value-4",
        },
        "providerExecuted": undefined,
        "toolCallId": "call-4",
        "toolName": "screenshot",
        "type": "tool-call",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "output": {
          "type": "text",
          "value": "result-4",
        },
        "toolCallId": "call-4",
        "toolName": "screenshot",
        "type": "tool-result",
      },
    ],
    "role": "tool",
  },
  {
    "content": [
      {
        "text": "final response",
        "type": "text",
      },
    ],
    "role": "assistant",
  },
]
`;

exports[`convertToModelMessages > assistant message > should handle conversation with mix of tool invocations and text 2`] = `
{
  "messages": [
    {
      "content": [
        {
          "text": "i am gonna use tool1",
          "type": "text",
        },
        {
          "input": {
            "value": "value-1",
          },
          "providerExecuted": undefined,
          "toolCallId": "call-1",
          "toolName": "screenshot",
          "type": "tool-call",
        },
      ],
      "role": "assistant",
    },
    {
      "content": [
        {
          "output": {
            "type": "text",
            "value": "result-1",
          },
          "toolCallId": "call-1",
          "toolName": "screenshot",
          "type": "tool-result",
        },
      ],
      "role": "tool",
    },
    {
      "content": [
        {
          "text": "i am gonna use tool2 and tool3",
          "type": "text",
        },
        {
          "input": {
            "value": "value-2",
          },
          "providerExecuted": undefined,
          "toolCallId": "call-2",
          "toolName": "screenshot",
          "type": "tool-call",
        },
        {
          "input": {
            "value": "value-3",
          },
          "providerExecuted": undefined,
          "toolCallId": "call-3",
          "toolName": "screenshot",
          "type": "tool-call",
        },
      ],
      "role": "assistant",
    },
    {
      "content": [
        {
          "output": {
            "type": "text",
            "value": "result-2",
          },
          "toolCallId": "call-2",
          "toolName": "screenshot",
          "type": "tool-result",
        },
        {
          "output": {
            "type": "text",
            "value": "result-3",
          },
          "toolCallId": "call-3",
          "toolName": "screenshot",
          "type": "tool-result",
        },
      ],
      "role": "tool",
    },
    {
      "content": [
        {
          "input": {
            "value": "value-4",
          },
          "providerExecuted": undefined,
          "toolCallId": "call-4",
          "toolName": "screenshot",
          "type": "tool-call",
        },
      ],
      "role": "assistant",
    },
    {
      "content": [
        {
          "output": {
            "type": "text",
            "value": "result-4",
          },
          "toolCallId": "call-4",
          "toolName": "screenshot",
          "type": "tool-result",
        },
      ],
      "role": "tool",
    },
    {
      "content": [
        {
          "text": "final response",
          "type": "text",
        },
      ],
      "role": "assistant",
    },
  ],
  "system": undefined,
}
`;

exports[`convertToModelMessages > assistant message > should handle conversation with multiple tool invocations that have step information 1`] = `
[
  {
    "content": [
      {
        "text": "response",
        "type": "text",
      },
      {
        "input": {
          "value": "value-1",
        },
        "providerExecuted": undefined,
        "toolCallId": "call-1",
        "toolName": "screenshot",
        "type": "tool-call",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "output": {
          "type": "text",
          "value": "result-1",
        },
        "toolCallId": "call-1",
        "toolName": "screenshot",
        "type": "tool-result",
      },
    ],
    "role": "tool",
  },
  {
    "content": [
      {
        "input": {
          "value": "value-2",
        },
        "providerExecuted": undefined,
        "toolCallId": "call-2",
        "toolName": "screenshot",
        "type": "tool-call",
      },
      {
        "input": {
          "value": "value-3",
        },
        "providerExecuted": undefined,
        "toolCallId": "call-3",
        "toolName": "screenshot",
        "type": "tool-call",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "output": {
          "type": "text",
          "value": "result-2",
        },
        "toolCallId": "call-2",
        "toolName": "screenshot",
        "type": "tool-result",
      },
      {
        "output": {
          "type": "text",
          "value": "result-3",
        },
        "toolCallId": "call-3",
        "toolName": "screenshot",
        "type": "tool-result",
      },
    ],
    "role": "tool",
  },
  {
    "content": [
      {
        "input": {
          "value": "value-4",
        },
        "providerExecuted": undefined,
        "toolCallId": "call-4",
        "toolName": "screenshot",
        "type": "tool-call",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "output": {
          "type": "text",
          "value": "result-4",
        },
        "toolCallId": "call-4",
        "toolName": "screenshot",
        "type": "tool-result",
      },
    ],
    "role": "tool",
  },
]
`;

exports[`convertToModelMessages > assistant message > should handle conversation with multiple tool invocations that have step information 2`] = `
{
  "messages": [
    {
      "content": [
        {
          "text": "response",
          "type": "text",
        },
        {
          "input": {
            "value": "value-1",
          },
          "providerExecuted": undefined,
          "toolCallId": "call-1",
          "toolName": "screenshot",
          "type": "tool-call",
        },
      ],
      "role": "assistant",
    },
    {
      "content": [
        {
          "output": {
            "type": "text",
            "value": "result-1",
          },
          "toolCallId": "call-1",
          "toolName": "screenshot",
          "type": "tool-result",
        },
      ],
      "role": "tool",
    },
    {
      "content": [
        {
          "input": {
            "value": "value-2",
          },
          "providerExecuted": undefined,
          "toolCallId": "call-2",
          "toolName": "screenshot",
          "type": "tool-call",
        },
        {
          "input": {
            "value": "value-3",
          },
          "providerExecuted": undefined,
          "toolCallId": "call-3",
          "toolName": "screenshot",
          "type": "tool-call",
        },
      ],
      "role": "assistant",
    },
    {
      "content": [
        {
          "output": {
            "type": "text",
            "value": "result-2",
          },
          "toolCallId": "call-2",
          "toolName": "screenshot",
          "type": "tool-result",
        },
        {
          "output": {
            "type": "text",
            "value": "result-3",
          },
          "toolCallId": "call-3",
          "toolName": "screenshot",
          "type": "tool-result",
        },
      ],
      "role": "tool",
    },
    {
      "content": [
        {
          "input": {
            "value": "value-4",
          },
          "providerExecuted": undefined,
          "toolCallId": "call-4",
          "toolName": "screenshot",
          "type": "tool-call",
        },
      ],
      "role": "assistant",
    },
    {
      "content": [
        {
          "output": {
            "type": "text",
            "value": "result-4",
          },
          "toolCallId": "call-4",
          "toolName": "screenshot",
          "type": "tool-result",
        },
      ],
      "role": "tool",
    },
  ],
  "system": undefined,
}
`;

exports[`convertToModelMessages > assistant message > should include filename for assistant file parts when provided 1`] = `
{
  "messages": [
    {
      "content": [
        {
          "data": "data:image/png;base64,dGVzdA==",
          "filename": "test.png",
          "mediaType": "image/png",
          "type": "file",
        },
      ],
      "role": "assistant",
    },
  ],
  "system": undefined,
}
`;

exports[`convertToModelMessages > assistant message > tool output error > should handle assistant message with tool output error that has no raw input 2`] = `
{
  "messages": [
    {
      "content": [
        {
          "text": "Let me calculate that for you.",
          "type": "text",
        },
        {
          "input": {
            "numbers": [
              1,
              2,
            ],
            "operation": "add",
          },
          "providerExecuted": undefined,
          "toolCallId": "call1",
          "toolName": "calculator",
          "type": "tool-call",
        },
      ],
      "role": "assistant",
    },
    {
      "content": [
        {
          "output": {
            "type": "error-text",
            "value": "Error: Invalid input",
          },
          "toolCallId": "call1",
          "toolName": "calculator",
          "type": "tool-result",
        },
      ],
      "role": "tool",
    },
  ],
  "system": undefined,
}
`;

exports[`convertToModelMessages > assistant message > tool output error > should handle assistant message with tool output error that has raw input 2`] = `
{
  "messages": [
    {
      "content": [
        {
          "text": "Let me calculate that for you.",
          "type": "text",
        },
        {
          "input": {
            "numbers": [
              1,
              2,
            ],
            "operation": "add",
          },
          "providerExecuted": undefined,
          "toolCallId": "call1",
          "toolName": "calculator",
          "type": "tool-call",
        },
      ],
      "role": "assistant",
    },
    {
      "content": [
        {
          "output": {
            "type": "error-text",
            "value": "Error: Invalid input",
          },
          "toolCallId": "call1",
          "toolName": "calculator",
          "type": "tool-result",
        },
      ],
      "role": "tool",
    },
  ],
  "system": undefined,
}
`;

exports[`convertToModelMessages > multiple messages > should handle a conversation with multiple messages 2`] = `
{
  "messages": [
    {
      "content": [
        {
          "text": "What's the weather like?",
          "type": "text",
        },
      ],
      "role": "user",
    },
    {
      "content": [
        {
          "text": "I'll check that for you.",
          "type": "text",
        },
      ],
      "role": "assistant",
    },
    {
      "content": [
        {
          "text": "Thanks!",
          "type": "text",
        },
      ],
      "role": "user",
    },
  ],
  "system": undefined,
}
`;

exports[`convertToModelMessages > multiple messages > should handle conversation with multiple tool invocations and user message at the end 1`] = `
[
  {
    "content": [
      {
        "input": {
          "value": "value-1",
        },
        "providerExecuted": undefined,
        "toolCallId": "call-1",
        "toolName": "screenshot",
        "type": "tool-call",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "output": {
          "type": "text",
          "value": "result-1",
        },
        "toolCallId": "call-1",
        "toolName": "screenshot",
        "type": "tool-result",
      },
    ],
    "role": "tool",
  },
  {
    "content": [
      {
        "input": {
          "value": "value-2",
        },
        "providerExecuted": undefined,
        "toolCallId": "call-2",
        "toolName": "screenshot",
        "type": "tool-call",
      },
      {
        "input": {
          "value": "value-3",
        },
        "providerExecuted": undefined,
        "toolCallId": "call-3",
        "toolName": "screenshot",
        "type": "tool-call",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "output": {
          "type": "text",
          "value": "result-2",
        },
        "toolCallId": "call-2",
        "toolName": "screenshot",
        "type": "tool-result",
      },
      {
        "output": {
          "type": "text",
          "value": "result-3",
        },
        "toolCallId": "call-3",
        "toolName": "screenshot",
        "type": "tool-result",
      },
    ],
    "role": "tool",
  },
  {
    "content": [
      {
        "input": {
          "value": "value-4",
        },
        "providerExecuted": undefined,
        "toolCallId": "call-4",
        "toolName": "screenshot",
        "type": "tool-call",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "output": {
          "type": "text",
          "value": "result-4",
        },
        "toolCallId": "call-4",
        "toolName": "screenshot",
        "type": "tool-result",
      },
    ],
    "role": "tool",
  },
  {
    "content": [
      {
        "text": "response",
        "type": "text",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "text": "Thanks!",
        "type": "text",
      },
    ],
    "role": "user",
  },
]
`;

exports[`convertToModelMessages > multiple messages > should handle conversation with multiple tool invocations and user message at the end 2`] = `
{
  "messages": [
    {
      "content": [
        {
          "input": {
            "value": "value-1",
          },
          "providerExecuted": undefined,
          "toolCallId": "call-1",
          "toolName": "screenshot",
          "type": "tool-call",
        },
      ],
      "role": "assistant",
    },
    {
      "content": [
        {
          "output": {
            "type": "text",
            "value": "result-1",
          },
          "toolCallId": "call-1",
          "toolName": "screenshot",
          "type": "tool-result",
        },
      ],
      "role": "tool",
    },
    {
      "content": [
        {
          "input": {
            "value": "value-2",
          },
          "providerExecuted": undefined,
          "toolCallId": "call-2",
          "toolName": "screenshot",
          "type": "tool-call",
        },
        {
          "input": {
            "value": "value-3",
          },
          "providerExecuted": undefined,
          "toolCallId": "call-3",
          "toolName": "screenshot",
          "type": "tool-call",
        },
      ],
      "role": "assistant",
    },
    {
      "content": [
        {
          "output": {
            "type": "text",
            "value": "result-2",
          },
          "toolCallId": "call-2",
          "toolName": "screenshot",
          "type": "tool-result",
        },
        {
          "output": {
            "type": "text",
            "value": "result-3",
          },
          "toolCallId": "call-3",
          "toolName": "screenshot",
          "type": "tool-result",
        },
      ],
      "role": "tool",
    },
    {
      "content": [
        {
          "input": {
            "value": "value-4",
          },
          "providerExecuted": undefined,
          "toolCallId": "call-4",
          "toolName": "screenshot",
          "type": "tool-call",
        },
      ],
      "role": "assistant",
    },
    {
      "content": [
        {
          "output": {
            "type": "text",
            "value": "result-4",
          },
          "toolCallId": "call-4",
          "toolName": "screenshot",
          "type": "tool-result",
        },
      ],
      "role": "tool",
    },
    {
      "content": [
        {
          "text": "response",
          "type": "text",
        },
      ],
      "role": "assistant",
    },
    {
      "content": [
        {
          "text": "Thanks!",
          "type": "text",
        },
      ],
      "role": "user",
    },
  ],
  "system": undefined,
}
`;

exports[`convertToModelMessages > should not include filename for user file parts when not provided 1`] = `
{
  "messages": [
    {
      "content": [
        {
          "data": "https://example.com/image.jpg",
          "filename": undefined,
          "mediaType": "image/jpeg",
          "type": "file",
        },
      ],
      "role": "user",
    },
  ],
  "system": undefined,
}
`;

exports[`convertToModelMessages > system message > should convert a simple system message 1`] = `
{
  "messages": [
    {
      "content": "System message",
      "role": "system",
    },
  ],
  "system": undefined,
}
`;

exports[`convertToModelMessages > system message > should convert a system message with Anthropic cache control metadata 1`] = `
{
  "messages": [
    {
      "content": "You are a helpful assistant.",
      "providerOptions": {
        "anthropic": {
          "cacheControl": {
            "type": "ephemeral",
          },
        },
      },
      "role": "system",
    },
  ],
  "system": undefined,
}
`;

exports[`convertToModelMessages > system message > should convert a system message with provider metadata 1`] = `
{
  "messages": [
    {
      "content": "System message with metadata",
      "providerOptions": {
        "testProvider": {
          "systemSignature": "abc123",
        },
      },
      "role": "system",
    },
  ],
  "system": undefined,
}
`;

exports[`convertToModelMessages > system message > should merge provider metadata from multiple text parts in system message 1`] = `
{
  "messages": [
    {
      "content": "Part 1 Part 2",
      "providerOptions": {
        "provider1": {
          "key1": "value1",
        },
        "provider2": {
          "key2": "value2",
        },
      },
      "role": "system",
    },
  ],
  "system": undefined,
}
`;

exports[`convertToModelMessages > user message > should convert a simple user message 2`] = `
{
  "messages": [
    {
      "content": [
        {
          "text": "Hello, AI!",
          "type": "text",
        },
      ],
      "role": "user",
    },
  ],
  "system": undefined,
}
`;

exports[`convertToModelMessages > user message > should handle user message file parts 1`] = `
{
  "messages": [
    {
      "content": [
        {
          "data": "https://example.com/image.jpg",
          "filename": undefined,
          "mediaType": "image/jpeg",
          "type": "file",
        },
        {
          "text": "Check this image",
          "type": "text",
        },
      ],
      "role": "user",
    },
  ],
  "system": undefined,
}
`;

exports[`convertToModelMessages > user message > should include filename for user file parts when provided 1`] = `
{
  "messages": [
    {
      "content": [
        {
          "data": "https://example.com/image.jpg",
          "filename": "image.jpg",
          "mediaType": "image/jpeg",
          "type": "file",
        },
      ],
      "role": "user",
    },
  ],
  "system": undefined,
}
`;

exports[`convertToModelMessages > when converting dynamic tool invocations > should convert a dynamic tool invocation 2`] = `
{
  "messages": [
    {
      "content": [
        {
          "input": {
            "value": "value-1",
          },
          "toolCallId": "call-1",
          "toolName": "screenshot",
          "type": "tool-call",
        },
      ],
      "role": "assistant",
    },
    {
      "content": [
        {
          "output": {
            "type": "text",
            "value": "result-1",
          },
          "toolCallId": "call-1",
          "toolName": "screenshot",
          "type": "tool-result",
        },
      ],
      "role": "tool",
    },
    {
      "content": [
        {
          "text": "Thanks!",
          "type": "text",
        },
      ],
      "role": "user",
    },
  ],
  "system": undefined,
}
`;

exports[`convertToModelMessages > when ignoring incomplete tool calls > should handle conversation with multiple tool invocations and user message at the end 2`] = `
{
  "messages": [
    {
      "content": [
        {
          "input": {
            "value": "value-1",
          },
          "providerExecuted": undefined,
          "toolCallId": "call-1",
          "toolName": "screenshot",
          "type": "tool-call",
        },
      ],
      "role": "assistant",
    },
    {
      "content": [
        {
          "output": {
            "type": "text",
            "value": "result-1",
          },
          "toolCallId": "call-1",
          "toolName": "screenshot",
          "type": "tool-result",
        },
      ],
      "role": "tool",
    },
    {
      "content": [
        {
          "text": "response",
          "type": "text",
        },
      ],
      "role": "assistant",
    },
    {
      "content": [
        {
          "text": "Thanks!",
          "type": "text",
        },
      ],
      "role": "user",
    },
  ],
  "system": undefined,
}
`;
